# clang-omp-with-cmake

./: CMakeLists.txt  README.md  omptest.cpp
